Ajoute la gestion des demandes de contribution